sửa lỗi chức năng ghép video